# chat

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
common/include/: packet.hpp
server/: CMakeLists.txt
server/src/: main.cpp
